--- a/final_pres.ipynb
+++ b/final_pres.ipynb
@@ -355,6 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TASK 1\n",
     "\n",
     "To use this code, run the code box below this function, entering the path you copied for a single specific file\n",
     "\n",
@@ -638,6 +639,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TASK 2\n",
+    "\n",
     "To use this code, run the code box below this function, entering the path you copied for full folder\n",
     "\n",
     "This code will return a bar graph visually representing the 4 classroom scores."
@@ -808,6 +811,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TASK 3\n",
     "\n",
     "To use this code, run the code box below this function, entering the path you copied for full folder\n"
    ]
@@ -1023,6 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TASK 4\n",
     "\n",
     "WARNING: YOU NEED TO THE OTHER FUNCTION BEFORE THIS ONE\n",
     "\n",
