--- a/final_pres.ipynb
+++ b/final_pres.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,9 +430,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Avg Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Enhanced Empathy</th>\n",
+       "      <td>3.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Growth Mindset</th>\n",
+       "      <td>3.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Radical Collaboration</th>\n",
+       "      <td>3.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Problem Solving</th>\n",
+       "      <td>3.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Avg Score\n",
+       "Enhanced Empathy           3.37\n",
+       "Growth Mindset             3.22\n",
+       "Radical Collaboration      3.31\n",
+       "Problem Solving             3.4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#classroom_score(pd.read_excel('enter you path here as a string!'))\n",
     "\n",
